--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           token: ${{ secrets.TOKEN }}
           plugin_languages: yes
-          plugin_habits: true
-          plugin_16personalities: true
-          plugin_16personalities_url: ${{ secrets.PERSON }}
-          plugin_16personalities_sections: personality, profile, traits
+          # plugin_habits: true
+          # plugin_16personalities: true
+          # plugin_16personalities_url: ${{ secrets.PERSON }}
+          # plugin_16personalities_sections: personality, profile, traits
